# remote_trackpad

./: .gitignore  README.md
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: controller.rs  lib.rs  main.rs  network.rs  protocol.rs  ui.rs
backend/tests/: protocol_and_controller.rs
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/remote_trackpad_frontend/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  network.dart  protocol.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: gesture_test.dart  network_tests.dart  protocol_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
