[package]
name = "remote-trackpad-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
enigo = "0.2"
tray-icon = "0.18"
eframe = "0.29"
egui = "0.29"
local-ip-address = "0.5"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "test-util"] }
